--- a/utforske/deskriptiv_statistikk_pandas.ipynb
+++ b/utforske/deskriptiv_statistikk_pandas.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en fuksjon/metode fra statistics biblioteket. Videre ønsker vi i samme steg å inkludere medianen \"sammen\" med størrelsene vi får ved å kjøre describe metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
     "\n",
-    "Det er satt opp en funksjon - desc_statistics - som utører nødvendige steg for beregningene. \n"
+    "Det er satt opp en funksjon - desc_statistics - som utfører nødvendige steg for beregningene. \n"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
