--- a/utforske/innlesing_og_behandling_av_datasett_pandas.ipynb
+++ b/utforske/innlesing_og_behandling_av_datasett_pandas.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Innlesing og behandling av flere parque-datsett i samme prosessesteg med Pyhton og pandas bibliotek\n",
-    "I denne noten viser man hvordan man kan lese inn og behandle et ukjent antall inndatasett ved å bruke phyton collection datatypes (list, dictionary og tuple) og phyton for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess."
+    "## Innlesing og behandling av flere parque-datsett i samme prosessesteg med python og pandas bibliotek\n",
+    "I denne noten viser man hvordan man kan lese inn og behandle et ukjent antall inndatasett ved å bruke python collection datatypes (list, dictionary og tuple) og python for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Daplas Python pakke (dapla) og bilioteket pandas importeres."
+    "#### Daplas python pakke (dapla) og biblioteket pandas importeres."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kjører metoden show for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky.  Oversikt blir lest inn i egen dataframe - df_datsets.\n",
+    "#### Kjører metoden show for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky.  Oversikt blir lest inn i egen dataframe - df_datasets.\n",
     "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH ."
    ]
   },
@@ -47,7 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### df_datsets skrives ut i output vindu. Setter opsjonen max_colwith til 150 slik at vi får se all informasjon i df_datasets i output.\n",
+    "#### df_datasets skrives ut i output vindu. \n",
+    "Setter opsjonen max_colwith til 150 slik at vi får se all informasjon i df_datasets i output.<br/>\n",
     "Oversikt over ulike options som kan settes i Pandas:https://pandas.pydata.org/pandas-docs/stable/user_guide/options.html"
    ]
   },
@@ -82,8 +83,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Selketerer ut rader bestående av de filnavn som vi ønsker å trekke ut for videre bearbeiding. \n",
-    "Viser hvordan man kan bruke liste (Phyton list) for å gjøre en slik seleksjon."
+    "#### Selekterer ut rader bestående av de filnavn som vi ønsker å trekke ut for videre bearbeiding. \n",
+    "Viser hvordan man kan bruke liste (python list) for å gjøre en slik seleksjon."
    ]
   },
   {
@@ -101,8 +102,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Oppretter dictionaryet dict_df og leser så de tre parquet datsettene i output vindu over inn som dataframes i dictionaryet. \n",
-    "Filnavnene blir keys i dictionaryet. Avslutningsvis i pargraf skrives key-navnene ut i output ."
+    "#### Oppretter dictionaryet dict_df og leser så de tre parquet datasettene i output vindu over inn som dataframes i dictionaryet. \n",
+    "Filnavnene blir keys i dictionaryet. Avslutningsvis i pargrafen skrives key-navnene ut i output ."
    ]
   },
   {
@@ -235,14 +236,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kobler sammen datsettene og etablerer en dataframe vi skal skrive til dapla for senere å utføre en statistisk analyse på"
+    "### Kobler sammen datasettene og etablerer en dataframe vi skal skrive til dapla for senere å utføre en statistisk analyse på"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kobler først areal og bnp og oppretter dataframen df_areal_bnp. Vi legger ikke denne dataframen inn i dictionaryet. Det hadde imidlertid enkelt latt seg gjøre ved å skrive f.eks. å bytte ut df_areal_bnp med dict['areal_bnp]."
+    "Kobler først areal og bnp og oppretter dataframen df_areal_bnp. Vi legger ikke denne dataframen inn i dictionaryet. Det hadde imidlertid enkelt latt seg gjøre ved å f.eks. bytte ut df_areal_bnp med dict['areal_bnp]."
    ]
   },
   {
@@ -258,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kobler derettet df_areal_bnp med innbyggerantall/2020 dataframen (i dictionaryet). Dermed får vi produsert den dataframen som vi ænsker å utføre en nærmere statistk analyse på. "
+    "Kobler deretter df_areal_bnp med innbyggerantall/2020 dataframen (i dictionaryet). Dermed får vi produsert den dataframen som vi ønsker å utføre en nærmere statistisk analyse på. "
    ]
   },
   {
@@ -274,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Skriver ut innhold i df_sammensatt i output"
+    "Skriver ut innhold i df_sammensatt til skjerm output"
    ]
   },
   {
@@ -291,9 +292,9 @@
    "metadata": {},
    "source": [
     "### Lagrer dataframe som parquet datasett på Dapla\n",
-    "Skriver pandas dataframe til GCS bucket i parquet format\n",
+    "NBNB!!!!Skriver pandas dataframe til GCS bucket i parquet format\n",
     "Merknad: Prøvde å skrive til hjemmekatalog under /user. Får feilmelding og beskjed om at jeg ikke har tilgang. Skriver derfor inntil videre datasettet til temporært område \n",
-    "til skattestatistikk. Dette må det rettes opp i."
+    "for skattestatistikk. Dette må det rettes opp i."
    ]
   },
   {
@@ -338,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
