--- a/utforske/innlesing_og_behandling_av_datasett_pyspark.ipynb
+++ b/utforske/innlesing_og_behandling_av_datasett_pyspark.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Innlesing og behandling av flere parque-datasett i samme prosessesteg med Pyspark\n",
-    "I denne noten viser man hvordan man kan lese inn og behandle et ukjent antall inndatasett ved å bruke phyton collection datatypes (list, dictionary og tuple) og phyton for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess.   "
+    "I denne noten viser vi hvordan man kan lese inn og behandle et ukjent antall inndatasett ved å bruke python collection datatypes (list, dictionary og tuple) og python for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess.   "
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "#### Innhenter verktøy fra bibliotek\n",
-    "Import-stegene henter inn bibliotek med kode og funksjoner utviklet ekstern."
+    "Import-stegene henter inn bibliotek med kode og funksjoner utviklet eksternt."
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kjører metoden read.path for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky.  Oversikt blir lest inn i egen dataframe - df_datsets.\n",
+    "#### Kjører metoden read.path for å få oversikt over hvilke parquet datasett som er tilrettelagt i tilknytning veilderens lagringsområde i sky.  Oversikt blir lest inn i egen dataframe - df_datasets.\n",
     "Aktuelt lagringsområde blir lagt inn som parameter (string objekt som vi definerer selv) INNDATA_PATH ."
    ]
   },
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### df_datsets skrives ut i output vindu. "
+    "#### df_datasets skrives ut i output vindu. "
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "source": [
     "#### Finner antall tegn i lengste path\n",
-    "Utleder lengden (antall tegn) for lenggste path med aggregate function.\"Collecter\" lengden (antall tegn) på lengste path inn i listeobjekt liste_max_length_path før det deretter blir lagt inn i integer objekt max_lengde_path. max_lengde_path brukes deretter som parameter i paragraf som avleder variabel filename (blir dataframe navn i notebook). Formål med paragraf er unngå hardkoding i utledning av variabelen filename."
+    "Utleder lengden (antall tegn) for lengste path med aggregate function. \"Collecter\" lengden (antall tegn) på lengste path inn i listeobjekt liste_max_length_path før det deretter blir lagt inn i integer objekt max_lengde_path. max_lengde_path brukes deretter som parameter i paragraf som avleder variabel filename (blir dataframe navn i notebook). Formål med paragraf er unngå hardkoding i utledning av variabelen filename."
    ]
   },
   {
@@ -103,8 +103,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Selketerer ut rader bestående av de filnavn som vi ønsker å trekke ut for videre bearbeiding. \n",
-    "Viser hvordan man kan bruke liste (Phyton list) for å gjøre en slik seleksjon."
+    "#### Seleketerer ut rader bestående av de filnavn som vi ønsker å trekke ut for videre bearbeiding. \n",
+    "Viser hvordan man kan bruke liste (Python list) for å gjøre en slik seleksjon."
    ]
   },
   {
@@ -122,8 +122,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Oppretter dictionaryet dict_df og leser så de tre parquet datsettene i output vindu over inn som dataframes i dictionaryet. \n",
-    "Filnavnene blir keys i dictionaryet. Avslutningsvis i pargraf skrives key-navnene ut i output ."
+    "#### Oppretter dictionaryet dict_df og leser så de tre parquet datasettene i output vindu over inn som dataframes i dictionaryet. \n",
+    "Filnavnene blir keys i dictionaryet. Avslutningsvis i pargrafen skrives key-navnene ut i output ."
    ]
   },
   {
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BNP (Legger inn variable som skal droppes fra dataframe i phyton tuple)"
+    "BNP (Legger inn variable som skal droppes fra dataframe i pyhton tuple)"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Innbyggerantall (Legger inn variable som skal droppes fra datafrma i phyton tuple)"
+    "Innbyggerantall (Legger inn variable som skal droppes fra datafrma i python tuple)"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kobler sammen datsettene og etablerer en dataframe vi skal skrive til dapla for senere å utføre en statistisk analyse på. "
+    "### Kobler sammen datasettene og etablerer en dataframe vi skal skrive til dapla for senere å utføre en statistisk analyse på. "
    ]
   },
   {
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kobler derettet df_areal_bnp med innbyggerantall/2020 dataframen (i dictionaryet). Dermed får vi produsert den dataframen som vi ænsker å utføre en nærmere statistk analyse på. "
+    "Kobler deretter df_areal_bnp med innbyggerantall/2020 dataframen (i dictionaryet). Dermed får vi produsert den dataframen som vi ønsker å utføre en nærmere statistisk analyse på. "
    ]
   },
   {
@@ -340,7 +340,7 @@
    "metadata": {},
    "source": [
     "### Lagrer dataframe som parquet datasett på Dapla\n",
-    "Skriver pyspark dataframe til GCS bucket i parquet format\n",
+    "Skriver pyspark dataframe til GCS bucket i parquet format. \n",
     "Skriver til hjemmekatalog under /user. "
    ]
   },
@@ -377,9 +377,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark (local)",
+   "display_name": "Pyspark (k8s cluster)",
    "language": "python",
-   "name": "pyspark_local"
+   "name": "pyspark_k8s"
   },
   "language_info": {
    "codemirror_mode": {
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
