Endret deskriptiv-statistikk notebookene
endret eksempel 2 i begge notebooker. Fått vekk warning i pyspark. Tar mode størrelse i phyton og skewness størrelse i pyspark. Eks 2 i pyspark er komplisert/vanskelig å forstå. Vi kan vurdere om vi tar det vekk.

--- a/utforske/deskriptiv_statistikk_pyspark.ipynb
+++ b/utforske/deskriptiv_statistikk_pyspark.ipynb
@@ -160,11 +160,11 @@
    "metadata": {},
    "source": [
     "### Beregninger eksempel 2\n",
-    "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden summary. Hvis vi ønsker å beregne størrelser som ikke er støttet av summary metoden kan vi bruke andre bibliotek - f.eks. statistics biblioteket.\n",
+    "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden summary. Hvis vi ønsker å beregne størrelser som ikke er støttet av summary metoden kan vi bruke andre funksjoner og/eller bibliotek.\n",
     "\n",
-    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en funksjon/metode fra statistics bibloteket. Videre ønsker vi i samme steg å inkludere medianen \"sammen\" med størrelsene vi får ved å kjøre summary metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
+    "I eksempel 2 ønsker vi å beregne skewness gjennom å bruke en funksjon fra pyspark.sql modulen. Videre ønsker vi i samme steg å inkludere skewness \"sammen\" med størrelsene vi får ved å kjøre summary metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
     "\n",
-    "Vi ønsker å etablere datasett hvor medianen er satt sammen med størrelsene vi får fra summary. For å få til dette må vi gjennomføre flere steg."
+    "Vi ønsker å etablere datasett hvor skeness er satt sammen med størrelsene vi får fra summary. For å få til dette må vi gjennomføre flere steg."
    ]
   },
   {
@@ -205,9 +205,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2. Beregner medianen\n",
-    "Beregner medianen for hver kolonne i df_areal_bnp_og_innbyggerantall med funksjonen approxQuantile.\n",
-    "Resultat fra funksjon blir returnert inn i values felt i dictionaryet dict_median der key-value blir initiert med navn på kolonne i var_lst (kolonnenavnene i stat_df og de vi også skal beregne median for). Beregninger gjøres i loop på en og en variabel. Man må sjekke datatypen på kolonnen. approxQuantile feiler hvis datatype ikke er av numerisk type. Etter gjennomløp av loop blir dictionaryet transformert til et row-objekt som deretter blir transformert til et rdd-objekt, før vi til slutt får etablert dataframen df_median ved å utføre metoden toDF på row-objektet. For å få like datatyper på df_stat og df_median (noe vi må ha for å få slått de sammen) endrer vi datatypen til de variabler i df_median som har ArrayType til String."
+    "##### 2. Beregner skewness\n",
+    "Beregner størrelsen skewness for hver kolonne, med unntak av summary kolonne, i df_areal_bnp_og_innbyggerantall med funksjonen skewness. Beregningene gjøres i en for loop. Resultat fra funksjon blir returnert inn i egne dataframes (ett pr variabel fra dataframen df_stat_adv).  Datasettene kobles så sammen slik at vi får ett datasett der skewness for alle variable er samlet i en rad. Kode i siste del av paragraf sørger for at det blir etablert og koblet på en summary kolonne med teksten 'skewness\". Mye kode og relativt kompleks metode for å få inn summary kolonnen. "
    ]
   },
   {
@@ -218,28 +217,34 @@
    "source": [
     "var_lst = list(df_stat_adv.columns)\n",
     "var_lst.remove('summary')\n",
-    "dict_median = {}\n",
+    "t = 0\n",
+    "dict = {}\n",
+    "i = 1\n",
     "for col in var_lst:\n",
-    "    if (isinstance(df_areal_bnp_og_innbyggerantall.schema[col].dataType, LongType)) | (isinstance(df_areal_bnp_og_innbyggerantall.schema[col].dataType, IntegerType)):\n",
-    "        dict_median[col] = df_areal_bnp_og_innbyggerantall.approxQuantile(col, [0.5], 0) \n",
-    "    else:\n",
-    "        dict_median[col] = \"null\" \n",
-    "dict_median['summary'] = 'median'        \n",
-    "median_row = Row(dict_median)   \n",
-    "rdd = sc.parallelize(median_row)\n",
-    "df_median = rdd.toDF()\n",
-    "for col in var_lst:\n",
-    "    if (isinstance(df_median.schema[col].dataType, ArrayType)):\n",
-    "        df_median = df_median.withColumn(col, df_median[col].getItem(0).cast(\"string\"))  \n",
-    "df_median.show()"
+    "     df_tmp = df_areal_bnp_og_innbyggerantall.agg(F.skewness(col).alias(col))\n",
+    "     if i == 1:\n",
+    "         df_stat_ske = df_tmp\n",
+    "     else:        \n",
+    "         df_stat_ske = df_stat_ske.join(df_tmp)\n",
+    "     i = i + 1  \n",
+    "dict_summary = {}\n",
+    "liste_summary= []\n",
+    "dict_summary['summary'] = 'skewness'\n",
+    "liste_summary.append(dict_summary)\n",
+    "felt_summary  = [StructField('summary', StringType(), False)]\n",
+    "schema = StructType(felt_summary)\n",
+    "rdd = spark.sparkContext.parallelize(liste_summary)\n",
+    "summary_df = spark.createDataFrame(rdd, schema)\n",
+    "df_stat_ske = df_stat_ske.join(summary_df)\n",
+    "df_stat_ske.show()    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 3. Slår sammen df_stat og df_median\n",
-    "Slår sammen df_stat og df_median. Viktig at man her bruker unionByName fordi rekkefølgen på variablene ikke er identisk."
+    "##### 3. Slår sammen df_stat og df_stat_ske\n",
+    "Slår sammen df_stat og df_stat_ske. Viktig at man her bruker unionByName fordi rekkefølgen på variablene ikke er identisk."
    ]
   },
   {
@@ -248,16 +253,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stat_sammensatt = df_stat_adv.unionByName(df_median)\n",
+    "df_stat_sammensatt = df_stat_adv.unionByName(df_stat_ske)\n",
     "df_stat_sammensatt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
