--- a/utforske/deskriptiv_statistikk_pandas.ipynb
+++ b/utforske/deskriptiv_statistikk_pandas.ipynb
@@ -142,9 +142,10 @@
     "### Beregninger - eksempel 2\n",
     "I eksempel 1 fikk vi beregnet de størrelsene vi var ute etter kun ved å bruke metoden describe. Hvis vi ønsker å beregne størrelser som ikke er støttet av describe metoden kan vi bruke andre bibliotek - f.eks. statistics bilioteket. \n",
     "\n",
-    "I eksempel 2 ønsker vi å beregne medianen gjennom å bruke en fuksjon/metode fra statistics biblioteket. Videre ønsker vi i samme steg å inkludere medianen \"sammen\" med størrelsene vi får ved å kjøre describe metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
+    "I eksempel 2 ønsker vi å beregne størrelsen mode (viser den verdien som opptrer oftest i variabel) gjennom å bruke en fuksjon/metode fra statistics biblioteket. Videre ønsker vi i samme steg å inkludere mode \"sammen\" med størrelsene vi får ved å kjøre describe metoden. Resultat skal transformeres på tilsvarende måte som i eksempel 1.\n",
     "\n",
-    "Det er satt opp en funksjon - desc_statistics - som utfører nødvendige steg for beregningene. \n"
+    "Det er satt opp en funksjon - desc_statistics - som utører nødvendige steg for beregningene. \n",
+    "\n"
    ]
   },
   {
@@ -154,8 +155,7 @@
     "Parametere til desc_statistics\n",
     "- df  : dataframen som er input til funksjon\n",
     "- dec : Numerisk variabel som hvis satt til 0 endrer datatyper til integer\n",
-    "- med : Boolsk variabel som hvis satt til True beregner medianen ved å bruke funksjonen (median) i statistics(st) biblioteket\n",
-    "     \n"
+    "- mod : Boolsk variabel som hvis satt til True beregner mode ved å bruke funksjonen (mode) i statistics(st) biblioteket"
    ]
   },
   {
@@ -164,13 +164,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def desc_statistics(df, dec, med):\n",
+    "def desc_statistics(df, dec, mod):\n",
     "    df_desc = df.describe()\n",
-    "    if med: \n",
-    "        median_value = []\n",
+    "    if mod: \n",
+    "        mode_value = []\n",
     "        for col in df_desc.columns:\n",
-    "            median_value.append(st.median(df[col]))\n",
-    "        df_desc.loc['median']= median_value \n",
+    "            mode_value.append(st.mode(df[col]))\n",
+    "        df_desc.loc['mode']= mode_value \n",
     "    if dec==0:\n",
     "        df_desc = df_desc.astype(int)\n",
     "    #return df_desc.transpose().round(dec)\n",
