endret pyspark deskriptiv statistikk
Forenklet eksempel 2

--- a/utforske/deskriptiv_statistikk_pyspark.ipynb
+++ b/utforske/deskriptiv_statistikk_pyspark.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "source": [
     "##### 2. Beregner skewness\n",
-    "Beregner størrelsen skewness for hver kolonne, med unntak av summary kolonne, i df_areal_bnp_og_innbyggerantall med funksjonen skewness. Beregningene gjøres i en for loop. Resultat fra funksjon blir returnert inn i egne dataframes (ett pr variabel fra dataframen df_stat_adv).  Datasettene kobles så sammen slik at vi får ett datasett der skewness for alle variable er samlet i en rad. Kode i siste del av paragraf sørger for at det blir etablert og koblet på en summary kolonne med teksten 'skewness\". Mye kode og relativt kompleks metode for å få inn summary kolonnen. "
+    "Beregner størrelsen skewness for hver kolonne, med unntak av summary kolonne, i df_areal_bnp_og_innbyggerantall med funksjonen skewness. Beregningene gjøres i en for loop. Resultat fra funksjon blir returnert inn i egne dataframes (ett pr variabel fra dataframen df_stat_adv).  Datasettene kobles så sammen slik at vi får ett datasett der skewness for alle variable er samlet i en rad. "
    ]
   },
   {
@@ -227,15 +227,7 @@
     "     else:        \n",
     "         df_stat_ske = df_stat_ske.join(df_tmp)\n",
     "     i = i + 1  \n",
-    "dict_summary = {}\n",
-    "liste_summary= []\n",
-    "dict_summary['summary'] = 'skewness'\n",
-    "liste_summary.append(dict_summary)\n",
-    "felt_summary  = [StructField('summary', StringType(), False)]\n",
-    "schema = StructType(felt_summary)\n",
-    "rdd = spark.sparkContext.parallelize(liste_summary)\n",
-    "summary_df = spark.createDataFrame(rdd, schema)\n",
-    "df_stat_ske = df_stat_ske.join(summary_df)\n",
+    "df_stat_ske = df_stat_ske.withColumn(\"summary\", F.lit('skewness'))    \n",
     "df_stat_ske.show()    "
    ]
   },
