lagt inn notebooks under kurs-ssb-dapla_veileder/notebooks/Finne, se og lagre data på Dapla/
Lagt inn:
Deskriptiv statistikk med Pyspark.ipynb
Deskriptiv statistikk med Python og Pandas.ipynb
Innlesing og behandling av datasett med Pyspark.ipynb
Innlesing og behandling av datasett med Python og Pandas.ipynb
Justert note: Finne, se og lagre data på Dapla.ipynb

--- a/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
@@ -29,7 +29,18 @@
     "\n",
     "### Daplas Python-pakke\n",
     "Dapla har utviklet en egen Python pakke for å kunne kommunisere direkte med Dapla-tjenester og jobbe med datasett uten å bruke spark. Inneholder blant annet funksjonalitet for å lese datasett fra Google Cloud Storage (GCS) inn som en Pandas dataframe, skrive innholdet i en Pandas dataframe til en \"bøtte\" i GCS, vise innhold i en GCS \"bøtte\" og lete etter datasett.\n",
-    "* [Dapla Python pakke.](Dapla%20python%20pakke.ipynb)"
+    "* [Dapla Python pakke.](Dapla%20python%20pakke.ipynb)\n",
+    "\n",
+    "### Innlesing og behandling av flere datasett i samme notebook\n",
+    "Eksempler i Pyspark og Python (med Pandas) som viser hvordan vi man kan lese inn og behandle et ukjent antall inndatasett ved å bruke python collection datatypes (list, dictionary og tuple) og python for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess.\n",
+    "* [Innlesing og behandling av datasett - Python med Pandas.](Innlesing%20og%20behandling%20av%20datasett%20med%20Pyton%20og%20Pandas.ipynb)\n",
+    "* [Innlesing og behandling av datasett - Pyspark.](Innlesing%20og%20behandling%20av%20datasett%20med%20Pyspark.ipynb)\n",
+    "\n",
+    "### Deskriptiv statistikk \n",
+    "Eksempler i Pyspark og Python (med Pandas) som viser hvordan vi kan beregne statistiske størrelser med innebygde funksjonner og metoder i verktøy og biblioteker.\n",
+    "* [Deskriptiv statistikk - Python med Pandas.](Deskriptiv%20statistikk%20med%20Python%20og%20Pandas.ipynb)\n",
+    "* [Deskriptiv statistikk - Pyspark.](Deskriptiv%20statistikk%20med%20Pyspark.ipynb)\n",
+    "\n"
    ]
   },
   {
@@ -56,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
