Endret en lenkefeil

--- a/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Finne, se og lagre data på Dapla.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "### Innlesing og behandling av flere datasett i samme notebook\n",
     "Eksempler i Pyspark og Python (med Pandas) som viser hvordan vi man kan lese inn og behandle et ukjent antall inndatasett ved å bruke python collection datatypes (list, dictionary og tuple) og python for loops for å operasjonalisere steg i en tenkt klargjørings eller analyseprosess.\n",
-    "* [Innlesing og behandling av datasett - Python med Pandas.](Innlesing%20og%20behandling%20av%20datasett%20med%20Pyton%20og%20Pandas.ipynb)\n",
+    "* [Innlesing og behandling av datasett - Python med Pandas.](Innlesing%20og%20behandling%20av%20datasett%20med%20Python%20og%20Pandas.ipynb)\n",
     "* [Innlesing og behandling av datasett - Pyspark.](Innlesing%20og%20behandling%20av%20datasett%20med%20Pyspark.ipynb)\n",
     "\n",
     "### Deskriptiv statistikk \n",
