Logisk imputering python

--- a/notebooks/Funksjoner i klargjøring/Logisk-imputering-python.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Logisk-imputering-python.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Importere biblioteker"
+    "#### Importere biblioteker og sette displayopsjoner"
    ]
   },
   {
@@ -59,7 +59,11 @@
    "outputs": [],
    "source": [
     "import dapla as dp\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "pd.options.display.max_colwidth = 5000\n",
+    "pd.options.display.float_format = \"{:.2f}\".format"
    ]
   },
   {
@@ -95,7 +99,9 @@
    "outputs": [],
    "source": [
     "df_areal_innbyggerantall_20 = pd.merge(df_areal, df_innbyggerantall_2020, how='left', on='Landkode')\n",
-    "df_areal_innbyggerantall_20"
+    "\n",
+    "#viser hvilke land med areal (venstre sett) som ikke har registrert innbyggerantall 2020\n",
+    "df_areal_innbyggerantall_20.loc[pd.isna(df_areal_innbyggerantall_20.Innbyggerantall)]"
    ]
   },
   {
@@ -111,7 +117,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal_innbyggerantall_20 = set_miss_to_zero(df_areal_innbyggerantall_20,col_names={'Innbyggerantall','År','Kilde_y','Land_y'})"
+    "# kaller på funksjonen set_miss_to_zero\n",
+    "df_areal_innbyggerantall_20 = set_miss_to_zero(df_areal_innbyggerantall_20,col_names={'Innbyggerantall','År','Kilde_y','Land_y'})\n",
+    "\n",
+    "# viser resultat av funksjonen\n",
+    "df_areal_innbyggerantall_20.loc[pd.isna(df_areal_innbyggerantall_20.Innbyggerantall)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Erstatte negativ verdi i bnp med 0 ved bruk av funksjonen set_neg_to_zero (kode)"
    ]
   },
   {
@@ -120,7 +137,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal_innbyggerantall_20"
+    "# Rydder først ut missing-verdier\n",
+    "df_bnp.drop(df_bnp.loc[pd.isna(df_bnp.BNP)].index, axis=0, inplace=True)\n",
+    "\n",
+    "# gjør om BNP til integer\n",
+    "df_bnp.BNP = df_bnp.BNP.astype('Int64')\n",
+    "\n",
+    "# skriver ut observasjoner hvor BNP<0\n",
+    "df_bnp.loc[df_bnp.BNP<0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kaller på funksjonen set_neg_to_zero\n",
+    "df_bnp_imp = set_neg_to_zero(df_bnp.copy(),['BNP'])\n",
+    "\n",
+    "# viser resultatet av funksjonen\n",
+    "df_bnp_imp.loc[df_bnp.Landkode.isin(['PT','SI'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ser at opprinnelig datasett har fortsatt opprinnelig verdi\n",
+    "df_bnp.loc[df_bnp.Landkode.isin(['PT','SI'])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Erstatte negativ verdi med absoluttverdien ved bruk av funksjonen set_neg_to_plus (kode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kaller på funksjonen set_neg_to_plus\n",
+    "df_bnp_imp_plus = set_neg_to_plus(df_bnp.copy(),['BNP'])\n",
+    "\n",
+    "# viser resultatet av funksjonen\n",
+    "df_bnp_imp_plus.loc[df_bnp.Landkode.isin(['PT','SI'])]"
    ]
   },
   {
