logisk imputering python

--- a/notebooks/Funksjoner i klargjøring/Logisk-imputering-python.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Logisk-imputering-python.ipynb
@@ -154,10 +154,10 @@
    "outputs": [],
    "source": [
     "# kaller på funksjonen set_neg_to_zero\n",
-    "df_bnp_imp = set_neg_to_zero(df_bnp.copy(),['BNP'])\n",
+    "df_bnp_imp_zero = set_neg_to_zero(df_bnp.copy(),['BNP'])\n",
     "\n",
     "# viser resultatet av funksjonen\n",
-    "df_bnp_imp.loc[df_bnp.Landkode.isin(['PT','SI'])]"
+    "df_bnp_imp_zero.loc[df_bnp.Landkode.isin(['PT','SI'])]"
    ]
   },
   {
