Logisk imputering python

--- a/notebooks/Funksjoner i klargjøring/Logisk-imputering-python.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Logisk-imputering-python.ipynb
@@ -191,6 +191,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lage datasett til bruk i eksempel på historisk imputering.\n",
+    "Først lages et mindre datasett over innbyggerantall i fire land i 2020. Deretter kobles et datsett med tall fra 2020 og et med tall fra 2018 sammen i neste paragraf. Variablene på datasettet fra 2018 gis nye navn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lager et datasett med landene FO, SE, BE og DK\n",
+    "df_innbyggerantall_2020_lite = df_innbyggerantall_2020.loc[df_innbyggerantall_2020.Landkode.isin(['FO','SE','BE','DK'])]\n",
+    "df_innbyggerantall_2020_lite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Endre variabelnan på 2018 datasettet\n",
+    "df_innbyggerantall_2018.rename(columns={'Innbyggerantall':'Innbyggerantall_2018','År':'År_2018','Kilde':'Kilde_2018','Landkode':'Landkode_2018'},inplace=True)\n",
+    "\n",
+    "# Kobler data fra df_innbyggerantall_2018 på df_innbyggerantall_2020_lite\n",
+    "df_innbyggere_2020_2018 = pd.merge(df_innbyggerantall_2020_lite, df_innbyggerantall_2018, on='Land', how='left')\n",
+    "\n",
+    "# gjør om missing til null\n",
+    "df_innbyggere_2020_2018 = set_miss_to_zero(df_innbyggere_2020_2018, col_names={'Landkode_2018','Innbyggerantall_2018','År_2018','Kilde_2018'})\n",
+    "\n",
+    "# gjør om Innbyggerantall_2018 og År_2018 til Integer\n",
+    "df_innbyggere_2020_2018.Innbyggerantall_2018 = df_innbyggere_2020_2018.Innbyggerantall_2018.astype('Int64')\n",
+    "df_innbyggere_2020_2018.År_2018 = df_innbyggere_2020_2018.År_2018.astype('Int64')\n",
+    "\n",
+    "df_innbyggere_2020_2018"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Til slutt lages et nytt datasett der verdier fra variablene fra 2018-datasettet er satt inn for verdiene der innbyggerantallet var 0.\n",
+    "Samtidig settes årstallet lik 2018 der vi har imputert 2018-tall og kilden endres til kilden fra 2018."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lager et nytt datasett ved å kopierer de to første kolonnene fra df_innbyggere_2020_2018\n",
+    "df_2020_imp_2018 = df_innbyggere_2020_2018[['Land','Landkode']].copy()\n",
+    "\n",
+    "# Legger til kolonnene 'Innbygger', 'År' og 'Kilde' med verdier fra ulike kolonner i df_innbyggere_2020_2018 avhengig av behov for imputering\n",
+    "df_2020_imp_2018[['Innbyggere','År','Kilde']] = df_innbyggere_2020_2018.apply(lambda x : pd.Series([x['Innbyggerantall'],x['År'],x['Kilde']]) if x['Innbyggerantall']>0 else pd.Series([x['Innbyggerantall_2018'],x['År_2018'],x['Kilde_2018']]), axis=1)\n",
+    "\n",
+    "df_2020_imp_2018"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
