Bitte små endringer
fra pyspark-funksjon til metoden

viser df_areal_innbyggerantall_union

--- a/notebooks/Funksjoner i klargjøring/Koble datasett i Python.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Koble datasett i Python.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "Land og landkode er konblingsnøkler, så de kan være like.\n",
     "\n",
-    "For å endre navn på en kolonne (variabel) i datasettet, brukes pyspark-funksjonen <code><i>dataframe</i>.rename</code></font>"
+    "For å endre navn på en kolonne (variabel) i datasettet, brukes metoden <code><i>dataframe</i>.rename</code></font>"
    ]
   },
   {
@@ -175,7 +175,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_areal_innbyggerantall_union"
+   ]
   },
   {
    "cell_type": "code",
