--- a/notebooks/Funksjoner i klargjøring/Koble datasett i Python.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Koble datasett i Python.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "source": [
     "### Kontrollere om det er konflikter i variabelnavnene (kolonnene)\n",
-    "<font size=2>Når to datasett skal kobles, er det viktig at kolonnene, som ikke er koblingsnøkkel har forskjellige navn. Dette kan løses på forskjellige måter. I dette eksemplet sjekker vi først hva kolonnene heter og deretter endrere vi kolonnennavnene for å unngå konflikt. For å sjekke kolonnenavn kan vi bruke pyspark-funksjonen for å skrive ut <i>skjemaet</i> til datasettet: <code><i>dataframe</i>.info()</code>\n",
+    "<font size=2>Når to datasett skal kobles, er det viktig at kolonnene, som ikke er koblingsnøkkel har forskjellige navn. Dette kan løses på forskjellige måter. I dette eksemplet sjekker vi først hva kolonnene heter og deretter endrere vi kolonnennavnene for å unngå konflikt. For å sjekke kolonnenavn kan vi bruke metoden for å skrive ut <i>skjemaet</i> til datasettet: <code><i>dataframe</i>.info()</code>\n",
     "</font>"
    ]
   },
