Ekstra linjer på skriving i R, via en klassisk R-dataframe og tilbake

--- a/notebooks/Finne, se og lagre data på Dapla/Lese inn og skrive dataframes i R.ipynb
+++ b/notebooks/Finne, se og lagre data på Dapla/Lese inn og skrive dataframes i R.ipynb
@@ -163,6 +163,87 @@
    "source": [
     "head(df_areal, 5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Coerce spark dataframen inn i en base-R dataframe.\n",
+    "Dette kan forårsake noen problemer, om det ikke er ren data i kolonnene feks\\\n",
+    "Men kan være nødvendig for mange av funksjonene i R."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_areals <- as.data.frame(df_areal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suppressMessages(library(tidyverse))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glimpse(df_areals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names(df_areals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary(df_areals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Coerce dataframen tilbake inn i en spark dataframe og lagre til dapla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark_df_areal <- as.DataFrame(df_areals)\n",
+    "typeof(spark_df_areal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Skriv dataframe tilbake til lagring (bør være en spark dataframe)\n",
+    "spark.write.path(spark_df_areal, \"/felles/veiledning/r/eksempler/areal/tilbakeskriv\", valuation = \"INTERNAL\", state = \"INPUT\")"
+   ]
   }
  ],
  "metadata": {
@@ -177,7 +258,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.0.3"
   }
  },
  "nbformat": 4,
