--- a/notebooks/Funksjoner i klargjøring/Beregninger-python.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Beregninger-python.ipynb
@@ -229,6 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Skriver ut dataframe\n",
     "dict_df['innbyggerantall/2020']"
    ]
   },
