--- a/notebooks/Funksjoner i klargjøring/Funksjoner i klargjøring.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Funksjoner i klargjøring.ipynb
@@ -33,7 +33,7 @@
     "- [Koble datasett](Koble%20datasett%20i%20Python.ipynb)\n",
     "- [Logisk imputering](Logisk-imputering-python.ipynb)\n",
     "- [Pivotere](Pivotere%20i%20Python.ipynb)\n",
-    "- [Sammensette](Sammensette.ipynb)"
+    "- [Sammensette](Sammensette-python.ipynb)"
    ]
   },
   {
