fix ignore -checkpoint.ipynb

--- a/notebooks/søk i notes.ipynb
+++ b/notebooks/søk i notes.ipynb
@@ -19,12 +19,20 @@
     "    if keyword==\"done\":\n",
     "        break\n",
     "    # path to the root directory to search\n",
-    "    root_dir = \".\"  \n",
-    "\n",
-    "    result = search_text_in_notes(keyword,root_dir)\n",
+    "    root_dir = \".\"\n",
+    "    ignore = \"-checkpoint.ipynb\"\n",
+    "merge\n",
+    "    result = search_text_in_notes(keyword,root_dir,ignore)\n",
     "    for file in result:\n",
     "        display(file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
