--- a/notebooks/søk i notes.ipynb
+++ b/notebooks/søk i notes.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.core.display import display\n",
     "\n",
     "%run search.py\n",
     "\n",
