--- a/notebooks/Funksjoner i klargjøring/Sammensette i Python.ipynb
+++ b/notebooks/Funksjoner i klargjøring/Sammensette i Python.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Sammensette\n",
     "#### Funksjon for å slå sammen datasett.\n",
-    "<font size=2>I Python kan man bruke funksjonen \"pd.concat\" for å slå sammen datasett.\n",
+    "<font size=2>I Python kan man bruke funksjonen \"pd.concat\" for å slå sammen datasett\n",
     "\n",
     "<font size=2>I eksemplene tar vi utgangspunkt i datasettene:\n",
     "- Innbyggerantalldatasett 2020 (df_land_innbyggerantall_2020) med variablene Land, Landkode, Innbyggerantall, År og Kilde definert i nevnte rekkefølge.\n",
