--- a/notebooks/søk i notes.ipynb
+++ b/notebooks/søk i notes.ipynb
@@ -3,43 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "from IPython.core.display import display\n",
+    "from IPython.display import clear_output\n",
+    "from ipywidgets import interact, widgets\n",
     "\n",
-    "%run search.py\n",
-    "\n",
-    "keyword = \"\"\n",
-    "\n",
-    "while (keyword!=\"done\"):\n",
-    "    # ask the user for keyword\n",
-    "    keyword = input(\"Søk i veilederen: \")  \n",
-    "    if keyword==\"done\":\n",
-    "        break\n",
-    "    # path to the root directory to search\n",
-    "    root_dir = \".\"\n",
-    "    ignore = \"-checkpoint.ipynb\"\n",
-    "    \n",
-    "    result = search_text_in_notes(keyword,root_dir,ignore)\n",
-    "    for file in result:\n",
-    "        display(file)"
+    "%run search.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "root_dir = \".\"\n",
+    "ignore = \"-checkpoint.ipynb\"\n",
+    "\n",
+    "input_field = widgets.Text(\n",
+    "    value='',\n",
+    "    description='Søk i veilder:',\n",
+    "    disabled=False\n",
+    ")\n",
+    "result_field = widgets.Output(layout={'border': '1px solid black'})\n",
+    "display(input_field, result_field)\n",
+    "\n",
+    "def handle_submit(sender):\n",
+    "    with result_field:\n",
+    "        result_field.clear_output()\n",
+    "        result = search_text_in_notes(sender.value,root_dir,ignore)\n",
+    "        if not result:\n",
+    "            display(f\"Vi finner dessverre ingen resultater når du søker etter {sender.value}\")\n",
+    "        else:\n",
+    "            for file in result:\n",
+    "                display(file)\n",
+    "\n",
+    "input_field.on_submit(handle_submit)"
+   ]
   }
  ],
  "metadata": {
